macros/tests/trybuild/foreign_mod.stderr
error: cannot use `serde_args::generate` macro on module
 --> tests/trybuild/foreign_mod.rs:6:1
  |
6 | mod foo;
  | ^^^^^^^^
